2017-04-26  Jean-Louis Martineau <JMartineau@carbonite.com>
	* common-src/amservice.c (handle_result): Call
	  security_close_connection
	* common-src/security-util.c (sec_tcp_conn_put): Kill the subprocess
	* common-src/security-util.h (sec_tcp_conn_put): Remove prototype
	* server-src/amcheck.c (handle_result): Call security_close_connection

2017-04-25  Jean-Louis Martineau <JMartineau@carbonite.com>
	* device-src/s3.c: Get a new curl handle after a 503 error. To force
	  closing the connection and opening a new one

2017-04-25  Jean-Louis Martineau <JMartineau@carbonite.com>
	* common-src/Makefile.am (INSTALLPERMS_exec): Add ambind, remove
	  amservice
	* server-src/Makefile.am (INSTALLPERMS_exec): Remove amcheck, dumper
	  and planner

2017-04-20  Jean-Louis Martineau <JMartineau@carbonite.com>
	* NEWS: S3 device: openstack keystone v3 support
	* device-src/s3-device.c: PROJECT-NAME and DOMAIN-NAME device
	  properties
	* device-src/s3-device.h (struct _S3Device): Add project_name and
	  domain_name fields
	* device-src/s3.c: Get token from keystone v3
	* device-src/s3.h (s3_open): Change prototype.
	* man/xml-source/amanda-devices.7.xml: Document new device properties

2017-04-20  Jean-Louis Martineau <JMartineau@carbonite.com>
	* common-src/amjson.c: Remove debugging statement

2017-04-14  Jean-Louis Martineau <JMartineau@carbonite.com>
	* common-src/amjson.c: New generic json parser
	* common-src/amjson.h: Add json parser prototypes
	* common-src/Makefile.am (libamanda_la_SOURCES): Add amjson.c
	* common-src/Makefile.am (noinst_HEADERS): Add amjson.h
	* device-src/s3.c (get_openstack_swift_api_v2_setting):Send json
	  requestand parse json result

2017-04-06  Jean-Louis Martineau <JMartineau@carbonite.com>
	Patch by Nathan Stratton Treadway
	* perl/Amanda/Interactivity/email.pm: Improve Interactivity

2017-04-06  Jean-Louis Martineau <JMartineau@carbonite.com>
	Patch by Nathan Stratton Treadway
	* perl/Amanda/Interactivity/tty_email.pm: Fix NAME description