@@ -1,3 +1,7 @@
+2017-05-02  Jean-Louis Martineau <JMartineau@carbonite.com>
+	* common-src/match.c (make_template): Fix
+	* installcheck/Amanda_Util.pl: Check fix
+
 2017-04-26  Jean-Louis Martineau <JMartineau@carbonite.com>
 	* common-src/amservice.c (handle_result): Call
 	  security_close_connection
